feat(page):리스트 다수 추가

--- a/_common/resources/html/badge.html
+++ b/_common/resources/html/badge.html
@@ -2,6 +2,7 @@
 <div class="g-example-inner flex-dire-col">
     <div class="krds-badge-wrap">
         <span class="subtitle">Default</span>
+        
         <span class="krds-badge outline-primary">Label</span>
         <span class="krds-badge outline-secondary">Label</span>
         <span class="krds-badge outline-gray">Label</span>
@@ -14,6 +15,7 @@
     </div>
     <div class="krds-badge-wrap">
         <span class="subtitle">small</span>
+
         <span class="krds-badge small outline-primary">Label</span>
         <span class="krds-badge small outline-secondary">Label</span>
         <span class="krds-badge small outline-gray">Label</span>
@@ -26,6 +28,7 @@
     </div>
     <div class="krds-badge-wrap">
         <span class="subtitle">medium</span>
+
         <span class="krds-badge medium outline-primary">Label</span>
         <span class="krds-badge medium outline-secondary">Label</span>
         <span class="krds-badge medium outline-gray">Label</span>
@@ -38,6 +41,7 @@
     </div>
     <div class="krds-badge-wrap">
         <span class="subtitle">large</span>
+
         <span class="krds-badge large outline-primary">Label</span>
         <span class="krds-badge large outline-secondary">Label</span>
         <span class="krds-badge large outline-gray">Label</span>
@@ -54,6 +58,7 @@
 <div class="g-example-inner flex-dire-col">
     <div class="krds-badge-wrap">
         <span class="subtitle">Default</span>
+
         <span class="krds-badge bg-primary">Label</span>
         <span class="krds-badge bg-secondary">Label</span>
         <span class="krds-badge bg-gray">Label</span>
@@ -66,6 +71,7 @@
     </div>
     <div class="krds-badge-wrap">
         <span class="subtitle">small</span>
+
         <span class="krds-badge small bg-primary">Label</span>
         <span class="krds-badge small bg-secondary">Label</span>
         <span class="krds-badge small bg-gray">Label</span>
@@ -78,6 +84,7 @@
     </div>
     <div class="krds-badge-wrap">
         <span class="subtitle">medium</span>
+
         <span class="krds-badge medium bg-primary">Label</span>
         <span class="krds-badge medium bg-secondary">Label</span>
         <span class="krds-badge medium bg-gray">Label</span>
@@ -90,6 +97,7 @@
     </div>
     <div class="krds-badge-wrap">
         <span class="subtitle">large</span>
+
         <span class="krds-badge large bg-primary">Label</span>
         <span class="krds-badge large bg-secondary">Label</span>
         <span class="krds-badge large bg-gray">Label</span>
@@ -107,6 +115,7 @@
 <div class="g-example-inner flex-dire-col">
     <div class="krds-badge-wrap">
         <span class="subtitle">Default</span>
+
         <span class="krds-badge bg-light-primary">Label</span>
         <span class="krds-badge bg-light-secondary">Label</span>
         <span class="krds-badge bg-light-gray">Label</span>
@@ -119,6 +128,7 @@
     </div>
     <div class="krds-badge-wrap">
         <span class="subtitle">small</span>
+
         <span class="krds-badge small bg-light-primary">Label</span>
         <span class="krds-badge small bg-light-secondary">Label</span>
         <span class="krds-badge small bg-light-gray">Label</span>
@@ -131,6 +141,7 @@
     </div>
     <div class="krds-badge-wrap">
         <span class="subtitle">medium</span>
+
         <span class="krds-badge medium bg-light-primary">Label</span>
         <span class="krds-badge medium bg-light-secondary">Label</span>
         <span class="krds-badge medium bg-light-gray">Label</span>
@@ -143,6 +154,7 @@
     </div>
     <div class="krds-badge-wrap">
         <span class="subtitle">large</span>
+
         <span class="krds-badge large bg-light-primary">Label</span>
         <span class="krds-badge large bg-light-secondary">Label</span>
         <span class="krds-badge large bg-light-gray">Label</span>
@@ -155,11 +167,12 @@
     </div>
 </div>
 
-<strong>Custom-badge</strong>
+<strong>Custom-badge::state</strong>
 <div class="g-example-inner flex-dire-col">
     <div class="krds-badge-wrap">
         <span class="subtitle">small</span>
-        <span class="krds-badge small custom-bd bg-light-primary">완료</span>
+
+        <span class="krds-badge small custom-bd bg-light-primary">모집중</span>
         <span class="krds-badge small custom-bd bg-light-secondary">Label</span>
         <span class="krds-badge small custom-bd bg-light-gray">미제출</span>
         <span class="krds-badge small custom-bd bg-light-point">반려</span>
@@ -167,11 +180,12 @@
         <span class="krds-badge small custom-bd bg-light-warning">결재중</span>
         <span class="krds-badge small custom-bd bg-light-success">승인</span>
         <span class="krds-badge small custom-bd bg-light-information">임시저장</span>
-        <span class="krds-badge small custom-bd bg-light-disabled">해당없음</span>
+        <span class="krds-badge small custom-bd bg-light-disabled">모집마감</span>
     </div>
     <div class="krds-badge-wrap">
         <span class="subtitle">medium</span>
-        <span class="krds-badge medium custom-bd bg-light-primary">완료</span>
+
+        <span class="krds-badge medium custom-bd bg-light-primary">모집중</span>
         <span class="krds-badge medium custom-bd bg-light-secondary">Label</span>
         <span class="krds-badge medium custom-bd bg-light-gray">미제출</span>
         <span class="krds-badge medium custom-bd bg-light-point">반려</span>
@@ -179,11 +193,12 @@
         <span class="krds-badge medium custom-bd bg-light-warning">결재중</span>
         <span class="krds-badge medium custom-bd bg-light-success">승인</span>
         <span class="krds-badge medium custom-bd bg-light-information">임시저장</span>
-        <span class="krds-badge medium custom-bd bg-light-disabled">해당없음</span>
+        <span class="krds-badge medium custom-bd bg-light-disabled">모집마감</span>
     </div>
     <div class="krds-badge-wrap">
         <span class="subtitle">large</span>
-        <span class="krds-badge large custom-bd bg-light-primary">완료</span>
+
+        <span class="krds-badge large custom-bd bg-light-primary">모집중</span>
         <span class="krds-badge large custom-bd bg-light-secondary">Label</span>
         <span class="krds-badge large custom-bd bg-light-gray">미제출</span>
         <span class="krds-badge large custom-bd bg-light-point">반려</span>
@@ -191,13 +206,77 @@
         <span class="krds-badge large custom-bd bg-light-warning">결재중</span>
         <span class="krds-badge large custom-bd bg-light-success">승인</span>
         <span class="krds-badge large custom-bd bg-light-information">임시저장</span>
-        <span class="krds-badge large custom-bd bg-light-disabled">해당없음</span>
+        <span class="krds-badge large custom-bd bg-light-disabled">모집마감</span>
+    </div>
+</div>
+
+<strong>Custom-badge::project</strong>
+<div class="g-example-inner flex-dire-col">
+    <div class="krds-badge-wrap">
+        <span class="subtitle">사업명</span>
+
+        <span class="krds-badge small badge" data-name="project01"></span>
+        <span class="krds-badge small badge" data-name="project02"></span>
+        <span class="krds-badge small badge" data-name="project03"></span>
+        <span class="krds-badge small badge" data-name="project04"></span>
+        <span class="krds-badge small badge" data-name="project05"></span>
     </div>
 </div>
 
 <strong>icon-badge</strong>
 <div class="g-example-inner flex-dire-col">
-    <span class="krds-badge small custom-bd">
-        <i class="svg-icon ico-refile-fill">답변 전</i>
-    </span>
+    <div class="krds-badge-wrap">
+        <span class="subtitle">small</span>
+
+        <span class="krds-badge small icon-bd">
+            <i class="svg-icon ico-talk-disabled">답변 전</i>
+        </span>
+
+        <span class="krds-badge small icon-bd">
+            <i class="svg-icon ico-talk-fill">답변 완료</i>
+        </span>
+    </div>
+</div>
+
+<strong>icon-text::state</strong>
+<div class="g-example-inner flex-dire-col">
+    <div class="krds-badge-wrap">
+        <span class="subtitle">small</span>
+
+        <span class="krds-badge text-bd small">
+            <i class="svg-icon ico-success-fill"></i>
+            <span class="">제출완료</span>
+        </span>
+
+        <span class="krds-badge text-bd small">
+            <i class="ssvg-icon ico-yeling-fill"></i>
+            <span>미제출</span>
+        </span>
+
+        <span class="krds-badge text-bd small">
+            <i class="svg-icon ico-reject-fill"></i>
+            <span>반려</span>
+        </span>
+
+        <span class="krds-badge text-bd small">
+            <i class="svg-icon ico-return-fill"></i>
+            <span>반송</span>
+        </span>
+
+        <span class="krds-badge text-bd small">
+            <i class="svg-icon ico-success-fill"></i>
+            <span>선정</span>
+        </span>
+
+        <span class="krds-badge text-bd small">
+            <i class="ssvg-icon ico-danger-fill"></i>
+            <span>미선정</span>
+        </span>
+
+        <span class="krds-badge text-bd small">
+            <i class="svg-icon ico-minus disabled"></i>
+            <span class="sr-only">해당없음</span>
+        </span>
+
+    </div>
 </div>
