--- a/_common/resources/html/icon.html
+++ b/_common/resources/html/icon.html
@@ -1,7 +1,6 @@
 <strong>마스크 아이콘-색 변경 가능</strong>
 <div class="g-example-inner">
     <i class="svg-icon ico-angle"></i>
-    <i class="svg-icon ico-angle disabled"></i>
     <i class="svg-icon ico-angle up"></i>
     <i class="svg-icon ico-angle left"></i>
     <i class="svg-icon ico-angle right"></i>
@@ -84,7 +83,7 @@
     <i class="svg-icon ico-heart"></i>
     <i class="svg-icon ico-edit-bold"></i>
     <i class="svg-icon ico-edit"></i>
-    <i class="svg-icon ico-edit-type2"></i>
+    <i class="svg-icon ico-edit2"></i>
     <i class="svg-icon ico-eleva"></i>
     <i class="svg-icon ico-ellipsv"></i>
     <i class="svg-icon ico-facesmile"></i>
@@ -115,8 +114,12 @@
     <i class="svg-icon ico-typobox"></i>
     <i class="svg-icon ico-typo"></i>
     <i class="svg-icon ico-veiwall"></i>
+     <i class="svg-icon ico-angle disabled"></i>
     <i class="svg-icon ico-refile-disabled"></i>
     <i class="svg-icon ico-lncheck-disabled"></i>
+    <i class="svg-icon ico-talk-disabled"></i>
+    <i class="svg-icon ico-minus disabled"></i>
+    <i class="svg-icon ico-edit2-disabled"></i>
 </div>
 <strong>이미지 아이콘-색 변경 불가능</strong>
 <div class="g-example-inner">
@@ -143,4 +146,6 @@
     <i class="svg-icon ico-upred-fill"></i>
     <i class="svg-icon ico-curser-fill"></i>
     <i class="svg-icon ico-pdf-fill"></i>
+    <i class="svg-icon ico-talk-fill"></i>
+    <i class="svg-icon ico-edit2-fill"></i>
 </div>
