--- a/_common/styleguide/styleguide.html
+++ b/_common/styleguide/styleguide.html
@@ -102,6 +102,27 @@
                     </div>
                 </section>
 
+                <section class="g-conts-area">
+                    <h4 class="con-tit">toggle</h4>
+                    <div class="g-example-wrap">
+                        <div class="g-example includeJs" data-include-file="../resources/html/toggle.html"></div>
+                        <div class="g-code-wrap krds-accordion">
+                            <div class="accordion-item">
+                                <h5 class="accordion-header">
+                                    <button type="button" class="btn-accordion" aria-expanded="true" id="accordionHeaderSample01" aria-controls="accordionCollapseSample01">코드 확인하기</button>
+                                </h5>
+                                <div class="accordion-collapse collapse" role="region" id="aaccordionCollapseSample01" aria-labelledby="accordionHeaderSample01">
+                                    <div class="accordion-body">
+                                        <div class="g-code-box">
+                                            <pre data-src="../resources/html/toggle.html"></pre>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
             </div>
         </div>
     </main>
