--- a/adm/html/operation-popup-list.html
+++ b/adm/html/operation-popup-list.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="충남교육청" />
-  <title th:text="${pageTitle}">충남교육청 단위학교 사업선택제 관리자 시스템</title>
+  <title th:text="${pageTitle}">팝업목록 최고관리자 operation-popup-list</title>
 
   <link rel="icon" href="/favicon.ico" />
 
